--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,8 +14,10 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src ./src
+COPY railway-start.sh ./railway-start.sh
 
-RUN mkdir -p /app/storage
+RUN mkdir -p /app/storage && \
+    chmod +x /app/railway-start.sh
 
 ENV MODULE_NAME=product_importer.main \
     APP_HOST=0.0.0.0 \
@@ -23,4 +25,6 @@ ENV MODULE_NAME=product_importer.main \
 
 EXPOSE 8000
 
+# Default command can be overridden by Railway service configuration
 CMD ["uvicorn", "product_importer.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
